Changing LDFLAGS for the static lib build:
OTHER_LDFLAGS = -all_load -ObjC

--- a/ios/xcode/FluentUILib.xcconfig
+++ b/ios/xcode/FluentUILib.xcconfig
@@ -5,7 +5,7 @@
 
 CODE_SIGN_STYLE = Automatic
 MTL_FAST_MATH = YES
-OTHER_LDFLAGS = -ObjC
+OTHER_LDFLAGS = -all_load -ObjC
 PRODUCT_NAME = FluentUI
 SKIP_INSTALL = YES
 SWIFT_VERSION = 5.0
